chore: set a `color-scheme` for the docs
this fixes the logo on the README being invisible when the client is in dark mode

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -2,3 +2,8 @@
   href="https://googleapis-fonts.thenational.academy/css2?family=Lexend:wght@300;400;600&display=swap"
   rel="stylesheet"
 />
+<style>
+  :root {
+    color-scheme: only light;
+  }
+</style>
